fix(UI): move alerts in app to top right, fix authorization success msg, fix helper text widths on smaller screens, give max-height to advanced send modals

--- a/assets/css/components/_alerts.scss
+++ b/assets/css/components/_alerts.scss
@@ -3,12 +3,16 @@
   animation: fade-in-down .5s;
   margin-top: 1vw;
 }
+.alert-in-app {
+  position: absolute;
+  top: 2px;
+  right: 12px;
+  z-index: 1049;
+}
 .alert-received-bitcoin {
+  @extend .alert-in-app;
   background: white;
   padding: 20px;
-  position: absolute;
-  right: 12px;
-  top: 12px;
   font-size: 1.2em;
   text-align: center;
   color: $success;
@@ -20,4 +24,8 @@
     right: -11px !important;
     color: grey;
   }
+}
+
+@media (max-width: 620px) {
+  .alert { width: 95vw; }
 }
