--- a/assets/css/components/_helpers.scss
+++ b/assets/css/components/_helpers.scss
@@ -20,8 +20,10 @@
   }
 }
 
-//override bootstrap popover
+//override parts of bootstrap popover
 .popover {
+  font-family: 'Roboto', 'Helvetica', sans-serif;
+  width: 225px;
   box-shadow: 0 3px 8px 0px rgba(158, 158, 158, 0.65) !important;
   border-radius: 7px !important;
   z-index: 1049; // keep below Bootstrap modals (1050)
